Benchmark with running all algos after loading